# Rishta-Agent

./: data.py  main.py  pyproject.toml  whatsapp_sender.py
chrome_profile/: DevToolsActivePort  Local State
chrome_profile/Default/: BrowsingTopicsState  DIPS  Favicons  History  Preferences  Secure Preferences  Top Sites  Web Data  passkey_enclave_state
chrome_profile/Default/DawnGraphiteCache/: data_1  index
chrome_profile/Default/DawnWebGPUCache/: data_1  index
chrome_profile/Default/Extension Rules/: LOG
chrome_profile/Default/Extension Scripts/: LOG
chrome_profile/Default/Extension State/: LOG  LOG.old
chrome_profile/Default/GCM Store/: LOG  LOG.old
chrome_profile/Default/GPUCache/: data_0  data_1  data_2  index
chrome_profile/Default/Network/: Cookies  Network Persistent State  Reporting and NEL  TransportSecurity
chrome_profile/Default/Session Storage/: LOG  LOG.old
chrome_profile/Default/Sessions/: Session_13396896337357543  Session_13396896565750068  Tabs_13396896337654581  Tabs_13396896566015055
chrome_profile/Default/Site Characteristics Database/: LOG  LOG.old
chrome_profile/Default/WebStorage/: QuotaManager
chrome_profile/Default/shared_proto_db/: LOG  LOG.old
chrome_profile/GrShaderCache/: data_0  data_1  f_000001  f_000002  f_000003  f_000004  f_000005  f_000006  f_000007  f_000008  f_000009  f_00000a  f_00000b  f_00000c  f_00000d  f_00000e  f_00000f  f_000010  f_000011  f_000012  index
chrome_profile/GraphiteDawnCache/: data_1  index
chrome_profile/ShaderCache/: data_1  index
chrome_profile/segmentation_platform/: ukm_db
(+301 files in other folders)
