[project]
name = "messagesender"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chainlit>=2.6.0",
    "dotenv>=0.9.9",
    "openai-agents>=0.1.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "selenium>=4.34.2",
    "streamlit>=1.46.1",
    "twilio>=9.6.5",
    "webdriver-manager>=4.0.2",
]
